# opencv-anomaly-monitor

./: .gitignore  README.md  pyproject.toml  requirements.txt  start-cli.cmd
src/anomaly_monitor/: __init__.py  config.py  detector.py  enroll.py  events.py  faces.py  main.py  menu.py  names.py  pose.py  tracking.py
tests/: test_config.py  test_detector_identity_memory.py  test_faces.py  test_main_media.py  test_names.py  test_pose.py  test_tracking.py
